main design and pokemonCard

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,19 @@
     box-sizing: border-box;
 }
 
-.container{
+.appContainer{
     min-height: 100vh;
     width: 100%;
+    background-image: url('./assets/wallpaper.jpg');
+    background-size: cover;
+}
+
+.pokemonContainer{
+    list-style: none;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 2.5rem 5rem;
+    gap: 2rem;
 }
