--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,7 +8,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-image: linear-gradient(45deg, #8f5453, #a7647f);
+    /* background-image: linear-gradient(45deg, #8f5453, #a7647f); */
+    background-image: linear-gradient(45deg, rgb(15, 15, 15), rgb(31, 30, 30));
     padding: 1rem 3rem;
     height: 15vh;
 }
@@ -22,5 +23,6 @@
 .logoTitle{
     font-family: PokemonHollow;
     font-size: 3rem;
+    color: #4e4655;
 }
 
