--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -9,12 +9,13 @@
     padding: .3rem .5rem;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    border: 1px solid #5a3736;
+    border: 1px solid #524b5a;
     outline: none;
-    background-color: #d6afaf;
+    background-color: #5d5466;
 }
 .searchInput:focus{
     box-shadow: 0 0 0 100000px rgba(0,0,0,.3);
+    z-index: 10000;
 }
 
 .searchBtn{
@@ -23,12 +24,13 @@
     align-items: center;
     font-size: 1.2rem;
     padding: .3rem;
-    border: 1px solid #5a3736;
+    border: 1px solid #524b5a;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-    background-color: #d6afaf;
+    background-color: #5d5466;
+    z-index: 10000;
 }
 .searchBtn:hover{
     cursor: pointer;
-    background-color: #5a3736;
+    background-color: #4b4452;
 }
