--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,13 @@
     background-size: cover;
 }
 
+.swiperContainer{
+    padding: 2.5rem 5rem;
+}
 .pokemonContainer{
     list-style: none;
     display: grid;
     justify-content: center;
     align-items: center;
     grid-template-columns: repeat(4, 1fr);
-    padding: 2.5rem 5rem;
-    gap: 2rem;
 }
