--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,3 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-.appContainer{
-    min-height: 100vh;
-    width: 100%;
-    background-image: url('./assets/wallpaper.jpg');
-    background-size: cover;
-}
-
-.swiperContainer{
-    padding: 2.5rem 5rem;
-}
-.pokemonContainer{
-    list-style: none;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: repeat(4, 1fr);
+h5{
+    color: red;
 }
