--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -8,7 +8,7 @@
     min-height: 100vh;
     width: 100%;
     background-image: url('../../assets/wallpaper.jpg');
-    /* background-size: cover; */
+    background-size: cover;
 }
 
 .swiperContainer{
