--- a/src/components/PokemonCard/pokemonCard.css
+++ b/src/components/PokemonCard/pokemonCard.css
@@ -3,15 +3,15 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 1rem;
+    padding: .8rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    gap: .5rem;
+    gap: .4rem;
     background-color: #99807f7a;
     box-shadow: 0 0 5px 5px #3f3534;
 }
 
 .pokemonImg{
-    width: 7.25vw;
+    width: 7.125vw;
 }
 .pokemonImg:hover{
     scale: 1.2;
