--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -2,10 +2,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow-y: hidden;
 }
 
 .appContainer{
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
     background-image: url('../../assets/wallpaper.jpg');
     background-size: cover;
@@ -14,6 +15,7 @@
 .swiperContainer{
     padding: 2.5rem 5rem;
 }
+
 .pokemonContainer{
     list-style: none;
     display: grid;
